--- a/cinema-expert/scss/_header.scss
+++ b/cinema-expert/scss/_header.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-bottom: 30px;
     width: 100%;
 
     &__logo{
