--- a/cinema-expert/scss/style.css
+++ b/cinema-expert/scss/style.css
@@ -1,5 +1,9 @@
 body,
-ul {
+ul,
+h1,
+h2,
+h3,
+p {
   margin: 0;
   padding: 0;
 }
@@ -29,9 +33,38 @@ body {
   background-color: #fff;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0 auto;
   max-width: 1054px;
   padding: 23px;
+  position: relative;
+}
+
+.content_color-line:before, .content_color-line:after {
+  content: "";
+  width: 13px;
+  position: absolute;
+  right: -13px;
+  background-repeat: no-repeat;
+}
+
+.content_color-line:before {
+  top: 0;
+  height: 500px;
+  background-image: url(../img/top_color_line.png);
+}
+
+.content_color-line:after {
+  bottom: 0;
+  height: 347px;
+  background-image: url(../img/bottom_color_line.png);
 }
 
 .header {
@@ -46,6 +79,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin-bottom: 30px;
   width: 100%;
 }
 
@@ -158,6 +192,40 @@ body {
   text-transform: uppercase;
 }
 
+.social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.social-links__link {
+  display: block;
+  height: 36px;
+  margin-left: 5px;
+  width: 38px;
+}
+
+.social-links__link_rss {
+  background-color: #f78f1d;
+  background-image: url(../img/icon_rss.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.social-links__link_fb {
+  background-color: #5261ac;
+  background-image: url(../img/icon_fb.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.social-links__link_tw {
+  background-color: #00aedb;
+  background-image: url(../img/icon_tw.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 .nav__list {
   background-color: #898989;
   display: -webkit-box;
@@ -205,5 +273,312 @@ body {
 
 .nav__item:nth-of-type(7) {
   background-color: #898989;
+}
+
+.main {
+  width: 65%;
+}
+
+.article {
+  position: relative;
+  width: 100%;
+}
+
+.article__date {
+  left: -73px;
+  position: absolute;
+  top: 0;
+}
+
+.article__title {
+  color: #000;
+  font-family: open-sans-bold, Arial, Helvetica, sans-serif;
+  font-size: 35px;
+  line-height: 1.3;
+  text-align: left;
+}
+
+.article__txt {
+  color: #494949;
+  font-family: open-sans-regular, Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
+  text-align: left;
+  margin: 15px 0;
+}
+
+.article__carousel {
+  width: 100%;
+}
+
+.date {
+  width: 68px;
+}
+
+.date__day {
+  color: #fff;
+  font-family: open-sans-bold, Arial, Helvetica, sans-serif;
+  font-size: 35px;
+  line-height: 1.5;
+  text-align: center;
+  background-color: #f78f1d;
+  display: block;
+}
+
+.date__month {
+  color: #fff;
+  font-family: open-sans-regular, Arial, Helvetica, sans-serif;
+  font-size: 19px;
+  line-height: 1.4;
+  text-align: center;
+  background-color: #00aedb;
+  display: block;
+  text-transform: uppercase;
+}
+
+.carousel {
+  border: 1px solid #dedddd;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 12px;
+}
+
+.carousel__window {
+  width: 100%;
+  height: auto;
+}
+
+.carousel__img-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 12px;
+}
+
+.carousel__img {
+  cursor: pointer;
+  border: 1px solid #dedddd;
+  outline: 2px solid #fff;
+  outline-offset: -3px;
+}
+
+.aside {
+  width: 33%;
+}
+
+.interesting {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
+.interesting__title {
+  color: #fff;
+  font-family: open-sans-bold, Arial, Helvetica, sans-serif;
+  font-size: 19px;
+  line-height: 2;
+  text-align: left;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #5261ac;
+  display: inline-block;
+  text-transform: uppercase;
+  padding: 0 18px;
+  position: relative;
+}
+
+.interesting__title:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 38px 0 0 38px;
+  border-color: transparent transparent transparent #5261ac;
+  position: absolute;
+  right: -38px;
+  top: 0;
+}
+
+.interesting__tab-btns {
+  margin-top: 4px;
+  width: 100%;
+}
+
+.interesting__content {
+  width: 100%;
+}
+
+.interesting__info-block {
+  border-bottom: 1px solid #dedddd;
+  width: 100%;
+}
+
+.interesting__info-block:last-of-type {
+  border-color: transparent;
+}
+
+.tab-btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.tab-btns__btn {
+  color: #fff;
+  font-family: open-sans-regular, Arial, Helvetica, sans-serif;
+  font-size: 19px;
+  line-height: 2;
+  text-align: center;
+  border: none;
+  position: relative;
+  width: 33.33333%;
+}
+
+.tab-btns__btn::after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 7px 7px 0 7px;
+  border-color: transparent;
+  position: absolute;
+  left: 50%;
+  bottom: -7px;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+}
+
+.tab-btns__btn:nth-of-type(1) {
+  background-color: #ec098d;
+}
+
+.tab-btns__btn:nth-of-type(1)::after {
+  border-top-color: #ec098d;
+}
+
+.tab-btns__btn:nth-of-type(2) {
+  background-color: #f78f1d;
+}
+
+.tab-btns__btn:nth-of-type(2)::after {
+  border-top-color: #f78f1d;
+}
+
+.tab-btns__btn:nth-of-type(3) {
+  background-color: #00aedb;
+}
+
+.tab-btns__btn:nth-of-type(3)::after {
+  border-top-color: #00aedb;
+}
+
+.info-block {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 18px 0;
+}
+
+.info-block__img {
+  border: 1px solid #dedddd;
+  outline: 2px solid #fff;
+  outline-offset: -3px;
+  width: 77px;
+}
+
+.info-block__content {
+  margin-left: 11.5px;
+}
+
+.info-block__title {
+  color: #00aedb;
+  font-family: open-sans-bold, Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  line-height: 1.25;
+  text-align: left;
+}
+
+.info-block__txt {
+  color: #494949;
+  font-family: open-sans-regular, Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 1.3;
+  text-align: left;
+  margin-top: 8px;
+}
+
+.liked {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.liked__title {
+  color: #fff;
+  font-family: open-sans-bold, Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  line-height: 2;
+  text-align: left;
+  background-color: #5261ac;
+  margin-top: 11px;
+  padding: 0 18px;
+  text-transform: uppercase;
+}
+
+.liked__shot-block {
+  margin-top: 17px;
+}
+
+.shot-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.shot-block__img {
+  border: 1px solid #dedddd;
+  outline: 2px solid #fff;
+  outline-offset: -3px;
+  width: 75px;
+}
+
+.shot-block__content {
+  margin-left: 13.5px;
+}
+
+.shot-block__txt {
+  color: #494949;
+  font-family: open-sans-regular, Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 1.3;
+  text-align: left;
+}
+
+.shot-block__link {
+  color: #00aedb;
+  font-family: open-sans-regular, Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 1.3;
+  text-align: left;
+  display: inline-block;
+  margin-top: 10px;
 }
 /*# sourceMappingURL=style.css.map */
