--- a/cinema-expert/scss/_tab-btns.scss
+++ b/cinema-expert/scss/_tab-btns.scss
@@ -13,6 +13,7 @@
             $angle_size: 7px;
             
             content: "";
+            display: none;
             width: 0;
             height: 0;
             border-style: solid;
