--- a/cinema-expert/scss/_carousel.scss
+++ b/cinema-expert/scss/_carousel.scss
@@ -12,6 +12,7 @@
         display: flex;
         justify-content: space-between;
         margin-top: 12px;
+        overflow: hidden;
     }
 
     &__img{
@@ -20,4 +21,20 @@
         outline: 2px solid $bg_color_content;
         outline-offset: -3px;
     }
+}
+
+@media (max-width: 575.98px) { 
+    
+}
+
+@media (max-width: 767.98px) { 
+
+}
+
+@media (max-width: 991.98px) { 
+
+}
+
+@media (max-width: 1199.98px) { 
+
 }
