--- a/cinema-expert/scss/_main.scss
+++ b/cinema-expert/scss/_main.scss
@@ -1,3 +1,21 @@
 ﻿.main{
     width: 65%;    
 }
+
+@media (max-width: 575.98px) { 
+    
+}
+
+@media (max-width: 767.98px) { 
+
+}
+
+@media (max-width: 991.98px) { 
+    .main{
+        width: 100%;
+    }
+}
+
+@media (max-width: 1199.98px) { 
+
+}
