Ряд мелких изменений

--- a/cinema-expert/scss/_body.scss
+++ b/cinema-expert/scss/_body.scss
@@ -3,4 +3,5 @@
     background-image: url(../img/bg_lines.png);
     background-position: 0 0;
     background-repeat: no-repeat;
+    background-size: 70%;
 }
