--- a/cinema-expert/scss/_interesting.scss
+++ b/cinema-expert/scss/_interesting.scss
@@ -1,4 +1,5 @@
 ﻿.interesting{
+    align-content: flex-start;
     align-items: flex-start;
     display: flex;
     flex-wrap: wrap;
@@ -80,4 +81,23 @@
             border-color: transparent;
         }
     }
+}
+
+@media (max-width: 575.98px) { 
+    
+}
+
+@media (max-width: 767.98px) { 
+
+}
+
+@media (max-width: 991.98px) { 
+    .interesting{
+        margin-right: 4px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 1199.98px) { 
+
 }
