--- a/cinema-expert/scss/_article.scss
+++ b/cinema-expert/scss/_article.scss
@@ -19,3 +19,27 @@
         width: 100%;
     }
 }
+
+@media (max-width: 575.98px) { 
+    
+}
+
+@media (max-width: 767.98px) { 
+
+}
+
+@media (max-width: 991.98px) { 
+    .article{
+        &__title{
+            margin-left: 35px; 
+        }
+        &__date{
+            left: -40px;
+            top: 10px;
+        }
+    }
+}
+
+@media (max-width: 1199.98px) { 
+
+}
