--- a/cinema-expert/scss/_aside.scss
+++ b/cinema-expert/scss/_aside.scss
@@ -1,3 +1,23 @@
 ﻿.aside{
     width: 33%;
 }
+
+@media (max-width: 575.98px) { 
+    
+}
+
+@media (max-width: 767.98px) { 
+
+}
+
+@media (max-width: 991.98px) { 
+    .aside{
+        //display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+}
+
+@media (max-width: 1199.98px) { 
+
+}
