--- a/cinema-expert/scss/_content.scss
+++ b/cinema-expert/scss/_content.scss
@@ -35,20 +35,22 @@
     }
 }
 
-@media (max-width: 575.98px) { 
-
-}
-
-@media (max-width: 767.98px) { 
-
+@media (max-width: 1199.98px) { 
+    .content{
+        margin: 0 60px;    
+    }
 }
 
 @media (max-width: 991.98px) { 
     
 }
 
-@media (max-width: 1199.98px) { 
+@media (max-width: 767.98px) { 
     .content{
-        margin: 0 60px;    
+        margin: 0 13px;    
     }
+}
+
+@media (max-width: 575.98px) { 
+
 }
