--- a/cinema-expert/scss/_liked.scss
+++ b/cinema-expert/scss/_liked.scss
@@ -16,5 +16,32 @@
     }
     &__shot-block{
         margin-top: 17px;
+
+        &:first-of-type{
+            margin-top: 4px;
+        }
     }
+}
+
+@media (max-width: 575.98px) { 
+    
+}
+
+@media (max-width: 767.98px) { 
+
+}
+
+@media (max-width: 991.98px) { 
+    .liked{
+        width: 100%;
+
+        &__title{
+            font-size: 19px;
+            margin-top: 0;
+        }
+    }
+}
+
+@media (max-width: 1199.98px) { 
+
 }
