--- a/cinema-expert/scss/_search.scss
+++ b/cinema-expert/scss/_search.scss
@@ -29,3 +29,19 @@
         text-transform: uppercase;
     }
 }
+
+@media (max-width: 575.98px) { 
+    
+}
+
+@media (max-width: 767.98px) { 
+
+}
+
+@media (max-width: 991.98px) { 
+
+}
+
+@media (max-width: 1199.98px) { 
+
+}
