--- a/cinema-expert/scss/_social-links.scss
+++ b/cinema-expert/scss/_social-links.scss
@@ -27,3 +27,21 @@
         }
     }
 }
+
+@media (max-width: 575.98px) { 
+    
+}
+
+@media (max-width: 767.98px) { 
+
+}
+
+@media (max-width: 991.98px) { 
+    .social-links{
+        justify-content: flex-end;
+    }
+}
+
+@media (max-width: 1199.98px) { 
+
+}
