--- a/cinema-expert/scss/_search.scss
+++ b/cinema-expert/scss/_search.scss
@@ -35,7 +35,15 @@
 }
 
 @media (max-width: 767.98px) { 
-
+    .search{
+        &__input{
+            width: 70%;
+        }
+        &__button{
+            width: 30%;
+            padding: 0;
+        }
+    }
 }
 
 @media (max-width: 991.98px) { 
