--- a/cinema-expert/scss/_shot-block.scss
+++ b/cinema-expert/scss/_shot-block.scss
@@ -1,4 +1,5 @@
 ﻿.shot-block{
+    align-items: flex-start;
     display: flex;
 
     &__img{
@@ -8,8 +9,7 @@
         width: 75px;
     }   
     &__content{
-        margin-left: 13.5px;
-        
+        margin-left: 13.5px;    
     }   
     &__txt{
         @include txt($size:13px, $line-height:1.3, $color:$txt_color_dark);
