--- a/cinema-expert/scss/_carousel.scss
+++ b/cinema-expert/scss/_carousel.scss
@@ -13,6 +13,7 @@
         justify-content: space-between;
         margin-top: 12px;
         overflow: hidden;
+        //height: 50px;
     }
 
     &__img{
@@ -23,8 +24,9 @@
         border: 1px solid $br_color_interesting;
         outline: 2px solid $bg_color_content;
         outline-offset: -3px;
-        height: 100%;
-        width: (100%- $img_margin *($img_number - 1) / $img_number) 
+        height: auto;
+        width: auto;
+        //width: (100%- $img_margin *($img_number - 1) / $img_number) 
     }
 }
 
