--- a/cinema-expert/scss/_colors.scss
+++ b/cinema-expert/scss/_colors.scss
@@ -24,6 +24,9 @@ $link_color: $blue;
 $logo_color1: $blue;
 $logo_color2: $green;
 
+// Бургер-меню
+$burger_color: $blue;
+
 // Поиск
 $search_btn_color: $blue;
 $search_br_color: #e5e5e5;
