--- a/cinema-expert/scss/_header.scss
+++ b/cinema-expert/scss/_header.scss
@@ -1,5 +1,6 @@
 ﻿.header{
     align-items: flex-end;
+    align-content: flex-start;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -12,6 +13,7 @@
     }
 
     &__search{
+        margin-top: 20px;
         height: 36px;
     }
 
@@ -38,15 +40,16 @@
     .header{
         &__logo{
             margin-right: 70%;
+            
         }
 
         &__search{
             flex: 0 1 auto;
-            //margin-left: 10px;
+            margin-top: 15px;
         }
 
         &__social-links{
-            //width: 100%;
+            margin-top: 15px;
         }
     }
 }
