--- a/bandaumnikov/scss/_aside.scss
+++ b/bandaumnikov/scss/_aside.scss
@@ -30,8 +30,10 @@
     }
 }
 
-@media (max-width: 767.98px) {
-    
+@media (max-width: 575.98px) {
+    .aside{
+        padding: 0;
+    }
 }
 
 @media (max-width: 991.98px) {  
