--- a/bandaumnikov/scss/_banner-2.scss
+++ b/bandaumnikov/scss/_banner-2.scss
@@ -33,7 +33,9 @@
         $right: 5%;
         $bottom: 7% ;
 
-        right: $right;
-        bottom: $bottom;
+        &__button{
+            right: $right;
+            bottom: $bottom;
+        }
     }
 }
